// Copyright (c) 2022 NTT Communications Corporation
//
// This software is released under the MIT License.
// see https://github.com/nttcom/pola/blob/main/LICENSE

syntax = "proto3";

package pb;

option go_package = "github.com/nttcom/pola/api/grpc";

service PceService {
  rpc CreateLsp (LspData) returns (LspStatus) {}
}

message Label {
    uint32 sid = 1;
    bytes loAddr = 2;
}

message LspData {
    bytes pcepSessionAddr = 1;
    bytes srcAddr = 2;
    bytes dstAddr = 3;
    repeated Label labels = 4;
    uint32 color = 5;
    string policyName = 6;
}

message LspStatus {
    bool isSuccess = 1;
}
